Fix to increase contrast between levels in location dropdown

--- a/src/style/css/locationdrop.css
+++ b/src/style/css/locationdrop.css
@@ -37,7 +37,7 @@
 }
 .dropdown-container {
     margin-left: 10px;
-    background-color: rgba(0, 0, 0, 0.03);
+    background-color: rgba(0, 0, 0, 0.05);
 }
 .dropdown-scroll {
     overflow-y: auto;
